# LWEG

./: CMakeLists.txt  LICENSE  README.md  buildAndRun.sh  main.cpp  rebuild.sh
Algebra/: consts.h
Algebra/Poly/: poly.cpp  poly.h  polyMatrix.cpp  polyMatrix.h  polyVector.cpp  polyVector.h
Algebra/Ring/: polyRing.cpp  polyRing.h
HashUtils/: shake128.cpp  shake128.h  shake256.cpp  shake256.h
LWEG/: LWEG.cpp  LWEG.h  LWEGContext.h
Math/: functions.cpp  functions.h
Tests/: tests.cpp  tests.h
utils/bytesUtils/: bytesUtils.cpp  bytesUtils.h
utils/sample/: sample.cpp  sample.h
